# ComfyUI-PulseOfMotion

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
example_workflows/: workflow.json
model/: ae_modules.py  attention.py  autoencoder2plus1d.py  autoencoder_temporal.py  distributions.py  fps_predictor.py
